Fixed opacity on tooltip. changed scrollbar colors

--- a/src/sass/components/ATATTooltip.scss
+++ b/src/sass/components/ATATTooltip.scss
@@ -1,6 +1,7 @@
 .v-tooltip__content {
   display: block !important;
   background-color: transparent !important;
+  opacity: 1 !important;
   ._tooltip-content-wrap {
     opacity: 0 !important;
     transition: opacity 0.25s !important;
