--- a/src/sass/utils/base.scss
+++ b/src/sass/utils/base.scss
@@ -101,7 +101,7 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #1d1c1d85;
+  background: rgba($base-light, 0.5);
   border-radius: 50px;
   border: 3px solid #fff;
   // border: 1px solid rgb(218, 218, 218);
@@ -113,5 +113,5 @@ body {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(146, 146, 146);
+  background: rgba($base, 0.5);
 }
